cluster-critical/argocd/argocd-helmchart.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
